[metadata]
name = cnt-report-aggregator
url = https://github.com/mkoura/report-aggregator
maintainer = IOG Cardano Node Test Engineering
maintainer_email = martin.kourim@iohk.io
description = Reports aggregator for cardano-node-tests
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    click
    pybuildkite
    PyGithub<2.0.0
    urllib3<2.0.0
    requests

[options.entry_points]
console_scripts =
    report-aggregator = report_aggregator.cli:cli
